--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body,
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: rgb(204, 125, 162);
+  background-color: rgb(34, 18, 39);
 }
 h1 {
   font-family: "SinaNovaW01-Regular";
@@ -26,12 +26,30 @@ p {
 border: 10px ridge rgb(102, 51, 153);
 border-radius: 15px;
 background-color: rgb(177, 129, 189);
-justify-self: center;
 text-align: center;
 width: 275px;
 height: 350px;
 margin-bottom: 75px;
 }
-img {
-  object-fit: contain;
+.card-price{
+  justify-self: center;
+  font-family: 'SinaNovaW01-Regular', Arial;
+  font-size: 14px;
+  background-color: rgb(15, 1, 19);
+  color: rgb(253, 226, 255);
+  width: 100px;
+  border: solid rgb(65, 56, 68);
+  border-radius: 10px;
+  margin-top: 50%;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.card-img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
