--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ h3 {
   font-size: 18px;
   text-align: center;
   background-color: rgb(235, 153, 185);
+  position: relative;
+  bottom: 25px
 }
 p {
   font-family: 'SinaNovaW01-Regular', Arial;
@@ -40,7 +42,11 @@ margin-bottom: 75px;
   width: 100px;
   border: solid rgb(65, 56, 68);
   border-radius: 10px;
-  margin-top: 50%;
+  position: relative;
+  top: 300px;
+}
+a{
+  text-decoration: none;
 }
 .container{
   display: flex;
@@ -52,4 +58,6 @@ margin-bottom: 75px;
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
+  position: relative;
+  bottom: 25px
 }
