--- a/style.css
+++ b/style.css
@@ -54,7 +54,14 @@ a{
   flex-wrap: wrap;
   justify-content: space-around;
 }
+.containertainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 .card-img {
+  background-color: rgb(177, 129, 189);
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
