--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ text-align: center;
 width: 275px;
 height: 350px;
 margin-bottom: 75px;
+box-shadow: 20px 15px 8px rgb(27, 1, 27);
 }
 .card-price{
   justify-self: center;
